Implementação de atualização em tempo real, e adição de Editar e Deletar um pedido

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.4.1",
-    "@supabase/supabase-js": "2"
+    "@supabase/supabase-js": "2",
+    "react-window": "latest",
+    "react-virtualized-auto-sizer": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
